rename column dataframe names

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -38,9 +38,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Adaptive Thresholding**\n",
+    "**Shoreline Extension**\n",
     "\n",
-    "Adaptive Thresholding: Extend the shoreline by this many pixels (Land-Sea-Mask)."
+    "Shoreline Extension: Extend the shoreline by this many pixels (Land-Sea-Mask)."
    ]
   },
   {
@@ -128,6 +128,30 @@
     "                             ('title', 'Maximum Target Size (m)'),\n",
     "                             ('abstract', 'Maximum Target Size (m): Target with dimension larger than this threshold is eliminated (Object-Discrimination).'),\n",
     "                             ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**AIS time interval**\n",
+    "\n",
+    "AIS time interval (min): Interval in minutes to search for AIS data around the S-1 acquisition time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "aisTimeInterval = dict([('id', 'aisTimeInterval'),\n",
+    "                        ('value', '10'),\n",
+    "                        ('title', 'AIS time interval (min)'),\n",
+    "                        ('abstract', 'AIS time interval: Interval in minutes to search for ais around the S-1 acquisition time.'),\n",
+    "                        ('minOccurs', '1')])"
    ]
   },
   {
@@ -359,11 +383,11 @@
     "               '2048M',\n",
     "               path]\n",
     "            \n",
-    "            options = ['/workspace/temp/temp/snap6/snap6/bin/gpt',\n",
-    "               '-x',\n",
-    "               '-c',\n",
-    "               '2048M',\n",
-    "               path]\n",
+    "            #options = ['/workspace/temp/temp/snap6/snap6/bin/gpt',\n",
+    "            #   '-x',\n",
+    "            #   '-c',\n",
+    "            #   '2048M',\n",
+    "            #   path]\n",
     "\n",
     "            p = subprocess.Popen(options,\n",
     "                stdout=subprocess.PIPE, stdin=subprocess.PIPE, stderr=subprocess.PIPE)\n",
@@ -414,8 +438,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def serial_processing(operators, **kwargs):\n",
     "   \n",
     "    options = dict()\n",
@@ -449,8 +471,15 @@
     "    \n",
     "    mygraph.view_graph()\n",
     "    \n",
-    "    mygraph.run()\n",
-    "    \n",
+    "    mygraph.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_input_metadata (input_refs):\n",
     "    \n",
     "    # for each product get metadata\n",
@@ -471,7 +500,7 @@
     "    input_metadata['enddate'] = pd.to_datetime(input_metadata['enddate'])\n",
     "    \n",
     "    \n",
-    "    return input_metadata\n"
+    "    return input_metadata"
    ]
   },
   {
@@ -484,8 +513,15 @@
     "    with zipfile.ZipFile(output_path, 'w') as myzip:\n",
     "        for file in files:\n",
     "            myzip.write(file, arcname=os.path.basename(file))\n",
-    "    return output_path\n",
-    "\n",
+    "    return output_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def write_properties_file(output_name, first_date, last_date, region_of_interest):\n",
     "    \n",
     "    title = 'Output %s' % output_name\n",
@@ -506,15 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "etc_path = \"/application/notebook/etc\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -522,7 +549,8 @@
    "source": [
     "output_folder = ''\n",
     "temp_folder = 'temp'\n",
-    "shp_folder = 'shp'"
+    "shp_folder = 'shp'\n",
+    "etc_path = \"/application/notebook/etc\""
    ]
   },
   {
@@ -582,7 +610,6 @@
     "    s1prd = \"%s/%s/%s.SAFE/%s\" % (data_path, s1path, s1path, s1meta)\n",
     "    \n",
     "    read['file'] =  s1prd\n",
-    "    #read['formatName'] = 'Sen3_SLSTRL1B_500m'\n",
     "    \n",
     "    reads.append(read)\n",
     "    \n"
@@ -610,10 +637,6 @@
    "outputs": [],
    "source": [
     "calibration = get_operator_default_parameters('Calibration')\n",
-    "\n",
-    "#for p in LandSeaMask:\n",
-    "#    if p == 'shorelineExtension':\n",
-    "#        LandSeaMask[p] = '10'\n",
     "\n",
     "calibration"
    ]
@@ -649,13 +672,6 @@
     "\n",
     "objectdiscrimination"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -771,6 +787,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "shipdetections_gdf = shipdetections_gdf.rename(columns={\"ShipDetections\": \"detection\",\n",
+    "                                                        \"Detected_width:Double\": \"width\",\n",
+    "                                                        \"Detected_length:Double\": \"length\",\n",
+    "                                                        \"TIMESTAMP(UTC)\":\"timestamp\"})\n",
+    "shipdetections_gdf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "shipdetections_gdf.to_file(os.path.join(shp_folder, 'shipdetections.shp'))"
    ]
   },
@@ -802,22 +831,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ais_data = '/workspace/Better_3rd_phase/Applications/EXT-03-02-01/ewf-ext-03-02-01/src/main/app-resources/notebook/etc/ais_2017_07.csv'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Import AIS data (first to DataFrame, then convert to GeoDataFrame).\n",
     "ais_df = pd.read_csv(ais_data, decimal=\",\", usecols=['MMSI', 'IMO', 'STATUS', 'SPEED(KNOTS x10)', 'LON', 'LAT',\n",
     "                                                     'COURSE', 'HEADING', 'TIMESTAMP(UTC)'],\n",
@@ -826,8 +839,6 @@
     "ais_df['TIMESTAMP(UTC)'] = pd.to_datetime(ais_df['TIMESTAMP(UTC)'])\n",
     "\n",
     "print('Number of rows in %s: %d' % (ais_data.split('\\\\')[-1], len(ais_df.index)))\n",
-    "\n",
-    "\n",
     "\n",
     "# add geometry\n",
     "ais_gdf = gpd.GeoDataFrame(ais_df, geometry=gpd.points_from_xy(ais_df.LON, ais_df.LAT), crs=\"EPSG:4326\")\n",
@@ -848,7 +859,6 @@
    "outputs": [],
    "source": [
     "# filter by AOI\n",
-    "#AOI = shapely.wkt.loads('POLYGON ((-29.97968971227660973 39.49718800212976078, -26.71593511606884519 39.49718800212976078, -26.75288328130893234 37.42809074868483776, -29.99200576735664114 37.46503891392492847, -29.97968971227660973 39.49718800212976078))')\n",
     "AOI = shapely.wkt.loads(input_metadata.iloc[0]['wkt'])\n",
     "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
     "ais_gdf_aoi.head()"
@@ -861,8 +871,9 @@
    "outputs": [],
    "source": [
     "# filter in time\n",
-    "min_date = input_metadata.iloc[0]['startdate'] - pd.Timedelta(minutes=10)\n",
-    "max_date = input_metadata.iloc[0]['enddate'] + pd.Timedelta(minutes=10)\n",
+    "aisti = int(aisTimeInterval['value'])\n",
+    "min_date = input_metadata.iloc[0]['startdate'] - pd.Timedelta(minutes=aisti)\n",
+    "max_date = input_metadata.iloc[0]['enddate'] + pd.Timedelta(minutes=aisti)\n",
     "print(min_date, max_date)\n",
     "ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > min_date) & (ais_gdf_aoi['TIMESTAMP(UTC)'] < max_date)]\n",
     "\n",
@@ -889,9 +900,37 @@
     "\n",
     "first = sorted.groupby('MMSI').first().reset_index()\n",
     "\n",
-    "res = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")\n",
+    "first.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(first)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first['TIMESTAMP(UTC)'] = first['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first = first.rename(columns={\"TIMESTAMP(UTC)\": \"TIMESTAMP\",\n",
+    "                    \"SPEED(KNOTS x10)\": \"SPEED\"})\n",
     "\n",
-    "res.head()"
+    "first = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")"
    ]
   },
   {
@@ -900,16 +939,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res['TIMESTAMP(UTC)'] = res['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')"
+    "first.head()"
    ]
   },
   {
@@ -919,7 +949,7 @@
    "outputs": [],
    "source": [
     "# export to shp\n",
-    "res.to_file(os.path.join(shp_folder, 'ais.shp'))"
+    "first.to_file(os.path.join(shp_folder, 'ais.shp'))"
    ]
   },
   {
@@ -971,26 +1001,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Terrain-correction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writes"
+    "#### Terrain-correction and geotiff output"
    ]
   },
   {
@@ -1005,7 +1019,6 @@
     "    read = dict()\n",
     " \n",
     "    read['file'] =  e['file'] + '.dim'\n",
-    "    #read['formatName'] = 'Sen3_SLSTRL1B_500m'\n",
     "    \n",
     "    reads.append(read)\n",
     "    \n",
@@ -1102,13 +1115,6 @@
     "shutil.rmtree(temp_folder)\n",
     "shutil.rmtree(shp_folder)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
