--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -591,7 +591,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Operators definition"
+    "#### Processing S-1 - Vessel detection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Operators definition"
    ]
   },
   {
@@ -695,15 +702,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Processing"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Vessel detection"
+    "##### Processing"
    ]
   },
   {
@@ -736,13 +741,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### AIS"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "##### Detected vessels"
    ]
   },
@@ -752,8 +750,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shipdetections_path = os.path.join(writes[0]['file'] + '.data', 'vector_data', 'ShipDetections.csv')\n",
-    "shipdetections_path"
+    "# read csv file with detections\n",
+    "shipdetections_path = os.path.join(writes[0]['file'] + '.data', 'vector_data', 'ShipDetections.csv')"
    ]
   },
   {
@@ -762,45 +760,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to pd dataframe\n",
-    "shipdetections_raw = pd.read_csv(shipdetections_path,sep='\\t', skiprows=[0])\n",
-    "shipdetections_raw.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean and add geometry\n",
-    "shipdetections_gdf = gpd.GeoDataFrame(shipdetections_raw[['ShipDetections', 'Detected_width:Double', 'Detected_length:Double']], geometry=gpd.points_from_xy(shipdetections_raw['Detected_lon:Double'], shipdetections_raw['Detected_lat:Double']), crs=\"EPSG:4326\")\n",
+    "if os.path.isfile(shipdetections_path):\n",
     "\n",
-    "shipdetections_gdf['TIMESTAMP(UTC)'] = input_metadata.iloc[0]['startdate'].strftime('%Y-%m-%d %H:%M:%S')\n",
+    "    # csv to pd dataframe\n",
+    "    shipdetections_raw = pd.read_csv(shipdetections_path,sep='\\t', skiprows=[0])\n",
+    "    \n",
+    "    if len(shipdetections_raw) > 0:\n",
     "\n",
-    "shipdetections_gdf.head()"
+    "        # select columns and add geometry\n",
+    "        shipdetections_gdf = gpd.GeoDataFrame(shipdetections_raw[['ShipDetections',\n",
+    "                                                                  'Detected_width:Double',\n",
+    "                                                                  'Detected_length:Double']],\n",
+    "                                              geometry=gpd.points_from_xy(shipdetections_raw['Detected_lon:Double'], shipdetections_raw['Detected_lat:Double']), crs=\"EPSG:4326\")\n",
+    "\n",
+    "        # add timestamp - equals to S-1 startdate\n",
+    "        shipdetections_gdf['TIMESTAMP(UTC)'] = input_metadata.iloc[0]['startdate'].strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "        # rename column names\n",
+    "        shipdetections_gdf = shipdetections_gdf.rename(columns={\"ShipDetections\": \"detection\",\n",
+    "                                                                \"Detected_width:Double\": \"width\",\n",
+    "                                                                \"Detected_length:Double\": \"length\",\n",
+    "                                                                \"TIMESTAMP(UTC)\":\"timestamp\"})\n",
+    "        # write it to shp file\n",
+    "        shipdetections_gdf.to_file(os.path.join(shp_folder, 's1_shipdetections.shp'))\n",
+    "        \n",
+    "    else:\n",
+    "        txtfile = open(\"s1_shipdetections.txt\",\"w\")\n",
+    "        txtfile.write(\"No ship detections from S-1 found!\\n\")\n",
+    "        txtfile.close()\n",
+    "else:\n",
+    "    txtfile = open(\"s1_shipdetections.txt\",\"w\")\n",
+    "    txtfile.write(\"No ship detections from S-1 found!\\n\")\n",
+    "    txtfile.close()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "shipdetections_gdf = shipdetections_gdf.rename(columns={\"ShipDetections\": \"detection\",\n",
-    "                                                        \"Detected_width:Double\": \"width\",\n",
-    "                                                        \"Detected_length:Double\": \"length\",\n",
-    "                                                        \"TIMESTAMP(UTC)\":\"timestamp\"})\n",
-    "shipdetections_gdf.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shipdetections_gdf.to_file(os.path.join(shp_folder, 'shipdetections.shp'))"
+    "#### AIS records selection"
    ]
   },
   {
@@ -816,6 +814,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# read ais file - 2017/02 and azores area\n",
     "ais_rel_path = 'ais_2017_07.csv'\n",
     "ais_data = os.path.join(etc_path, ais_rel_path)\n",
     "    \n",
@@ -841,122 +840,84 @@
     "print('Number of rows in %s: %d' % (ais_data.split('\\\\')[-1], len(ais_df.index)))\n",
     "\n",
     "# add geometry\n",
-    "ais_gdf = gpd.GeoDataFrame(ais_df, geometry=gpd.points_from_xy(ais_df.LON, ais_df.LAT), crs=\"EPSG:4326\")\n",
-    "ais_gdf.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filter by AOI\n",
-    "AOI = shapely.wkt.loads(input_metadata.iloc[0]['wkt'])\n",
-    "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
-    "ais_gdf_aoi.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# filter in time\n",
-    "aisti = int(aisTimeInterval['value'])\n",
-    "min_date = input_metadata.iloc[0]['startdate'] - pd.Timedelta(minutes=aisti)\n",
-    "max_date = input_metadata.iloc[0]['enddate'] + pd.Timedelta(minutes=aisti)\n",
-    "print(min_date, max_date)\n",
-    "ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > min_date) & (ais_gdf_aoi['TIMESTAMP(UTC)'] < max_date)]\n",
-    "\n",
-    "ais_gdf_aoi.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(ais_gdf_aoi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# first way\n",
-    "sorted = ais_gdf_aoi.sort_values(['MMSI', 'TIMESTAMP(UTC)'], ascending = [True, False])\n",
-    "\n",
-    "first = sorted.groupby('MMSI').first().reset_index()\n",
-    "\n",
-    "first.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(first)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first['TIMESTAMP(UTC)'] = first['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first = first.rename(columns={\"TIMESTAMP(UTC)\": \"TIMESTAMP\",\n",
-    "                    \"SPEED(KNOTS x10)\": \"SPEED\"})\n",
-    "\n",
-    "first = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export to shp\n",
-    "first.to_file(os.path.join(shp_folder, 'ais.shp'))"
+    "ais_gdf = gpd.GeoDataFrame(ais_df, geometry=gpd.points_from_xy(ais_df.LON, ais_df.LAT), crs=\"EPSG:4326\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output shp files"
+    "##### Select AIS data - AOI and time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_res_0 = False\n",
+    "\n",
+    "# filter by AOI\n",
+    "AOI = shapely.wkt.loads(input_metadata.iloc[0]['wkt'])\n",
+    "ais_gdf_aoi = ais_gdf[ais_gdf['geometry'].within(AOI)]\n",
+    "\n",
+    "print('n. ais records af. aoi selec: {0}'.format(len(ais_gdf_aoi)))\n",
+    "\n",
+    "if len(ais_gdf_aoi) == 0: is_res_0 = True\n",
+    "\n",
+    "# filter in time\n",
+    "\n",
+    "if not(is_res_0):\n",
+    "    \n",
+    "    aisti = int(aisTimeInterval['value'])\n",
+    "    min_date = input_metadata.iloc[0]['startdate'] - pd.Timedelta(minutes=aisti)\n",
+    "    max_date = input_metadata.iloc[0]['enddate'] + pd.Timedelta(minutes=aisti)\n",
+    "    print(min_date, max_date)\n",
+    "    ais_gdf_aoi = ais_gdf_aoi[(ais_gdf_aoi['TIMESTAMP(UTC)'] > min_date) & (ais_gdf_aoi['TIMESTAMP(UTC)'] < max_date)]\n",
+    "\n",
+    "    print('n. ais records af. in time selec: {0}'.format(len(ais_gdf_aoi)))\n",
+    "    \n",
+    "    if len(ais_gdf_aoi) == 0: is_res_0 = True\n",
+    "\n",
+    "# get only unique vessels\n",
+    "if not(is_res_0):\n",
+    "    \n",
+    "    sorted = ais_gdf_aoi.sort_values(['MMSI', 'TIMESTAMP(UTC)'], ascending = [True, False])\n",
+    "\n",
+    "    first = sorted.groupby('MMSI').first().reset_index()\n",
+    "\n",
+    "    print('n. ais records af. unique selec: {0}'.format(len(first)))\n",
+    "    \n",
+    "    if len(first) == 0: is_res_0 = True\n",
+    "        \n",
+    "\n",
+    "if not(is_res_0):\n",
+    "    \n",
+    "    # timestamp to string (before exporting to shp)\n",
+    "    first['TIMESTAMP(UTC)'] = first['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')\n",
+    "\n",
+    "    # rename column names\n",
+    "    first = first.rename(columns={\"TIMESTAMP(UTC)\": \"TIMESTAMP\",\n",
+    "                        \"SPEED(KNOTS x10)\": \"SPEED\"})\n",
+    "    \n",
+    "    # make sure it is a geodataframe before exporting it\n",
+    "    first = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")\n",
+    "\n",
+    "    # export to shp\n",
+    "    first.to_file(os.path.join(shp_folder, 'ais.shp'))\n",
+    "\n",
+    "else:\n",
+    "    txtfile = open(\"ais.txt\",\"w\")\n",
+    "    txtfile.write(\"No ais records found.\\n\")\n",
+    "    txtfile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save shp file results"
    ]
   },
   {
@@ -1004,7 +965,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Terrain-correction and geotiff output"
+    "#### Processing S-1 - Terrain-correction and geotiff output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Operators definition"
    ]
   },
   {
@@ -1013,16 +981,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reads = []\n",
+    "reads_tc = []\n",
     "for e in writes:\n",
     "    \n",
     "    read = dict()\n",
     " \n",
     "    read['file'] =  e['file'] + '.dim'\n",
     "    \n",
-    "    reads.append(read)\n",
+    "    reads_tc.append(read)\n",
     "    \n",
-    "reads"
+    "reads_tc"
    ]
   },
   {
@@ -1082,6 +1050,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Processing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1091,7 +1066,7 @@
     "             'Terrain-Correction',\n",
     "             'Write']\n",
     "\n",
-    "for r,w in zip(reads,writes_tc):\n",
+    "for r,w in zip(reads_tc, writes_tc):\n",
     "    \n",
     "    serial_processing(operators,\n",
     "                      Read=r,\n",
@@ -1103,7 +1078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Remove temporary folder"
+    "#### Remove temporary folders"
    ]
   },
   {
