fix no results txt file location

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -785,11 +785,11 @@
     "        shipdetections_gdf.to_file(os.path.join(shp_folder, 's1_shipdetections.shp'))\n",
     "        \n",
     "    else:\n",
-    "        txtfile = open(\"s1_shipdetections.txt\",\"w\")\n",
+    "        txtfile = open(os.path.join(shp_folder, 's1_shipdetections.txt'),\"w\")\n",
     "        txtfile.write(\"No ship detections from S-1 found!\\n\")\n",
     "        txtfile.close()\n",
     "else:\n",
-    "    txtfile = open(\"s1_shipdetections.txt\",\"w\")\n",
+    "    txtfile = open(os.path.join(shp_folder, 's1_shipdetections.txt'),\"w\")\n",
     "    txtfile.write(\"No ship detections from S-1 found!\\n\")\n",
     "    txtfile.close()"
    ]
@@ -908,7 +908,7 @@
     "    first.to_file(os.path.join(shp_folder, 'ais.shp'))\n",
     "\n",
     "else:\n",
-    "    txtfile = open(\"ais.txt\",\"w\")\n",
+    "    txtfile = open(os.path.join(shp_folder, 'ais.txt'),\"w\")\n",
     "    txtfile.write(\"No ais records found.\\n\")\n",
     "    txtfile.close()"
    ]
