add s-1 slice number to output name

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -261,6 +261,8 @@
     "import shapely.wkt\n",
     "\n",
     "import lxml.etree as etree\n",
+    "import xml.etree.ElementTree as ET\n",
+    "\n",
     "import subprocess\n",
     "import tempfile\n",
     "import time\n",
@@ -271,7 +273,8 @@
     "from snappy import HashMap\n",
     "\n",
     "import zipfile\n",
-    "import glob"
+    "import glob\n",
+    "\n"
    ]
   },
   {
@@ -619,7 +622,13 @@
     "    read['file'] =  s1prd\n",
     "    \n",
     "    reads.append(read)\n",
-    "    \n"
+    "    \n",
+    "    # get slice number from S-1 metadata (manifest.safe)\n",
+    "    root = ET.parse(s1prd).getroot()\n",
+    "    s1_slice_num = root.find(\"./metadataSection/metadataObject[@ID='generalProductInformation']/metadataWrap/xmlData/{http://www.esa.int/safe/sentinel-1.0/sentinel-1/sar/level-1}standAloneProductInformation/{http://www.esa.int/safe/sentinel-1.0/sentinel-1/sar/level-1}sliceNumber\")\n",
+    "    s1_slice_num = s1_slice_num.text\n",
+    "    \n",
+    "    print('slice number: ' + s1_slice_num)"
    ]
   },
   {
@@ -934,7 +943,7 @@
     "\n",
     "startdatetime = input_metadata.iloc[0]['startdate'].strftime('%Y%m%dT%H%M')\n",
     "\n",
-    "s1track = 'S1{0:03}'.format(int(track))\n",
+    "s1track = 'S1o{0:03}s{1:03}'.format(int(track), int(s1_slice_num))\n",
     "\n",
     "output_name = '_'.join([s1track,'AIS', 'vesseldetection', startdatetime])\n",
     "                        \n",
@@ -1027,7 +1036,7 @@
     "\n",
     "    startdatetime = row['startdate'].strftime('%Y%m%dT%H%M')\n",
     "\n",
-    "    s1track = 'S1{0:03}'.format(int(track))\n",
+    "    s1track = 'S1o{0:03}s{1:03}'.format(int(track), int(s1_slice_num))\n",
     "\n",
     "    output_name = '_'.join([s1track,'Sigma0VV', startdatetime])\n",
     "                        \n",
