short temporal baseline approch added

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -728,6 +728,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "operators = ['Read',\n",
     "             'Land-Sea-Mask',\n",
     "             'Calibration',\n",
@@ -743,7 +744,7 @@
     "                      Calibration=calibration,\n",
     "                      AdaptiveThresholding=adaptivethresholding,\n",
     "                      Object_Discrimination=objectdiscrimination,\n",
-    "                      Write=w)"
+    "                      Write=w)\n"
    ]
   },
   {
@@ -888,19 +889,45 @@
     "    print('n. ais records af. in time selec: {0}'.format(len(ais_gdf_aoi)))\n",
     "    \n",
     "    if len(ais_gdf_aoi) == 0: is_res_0 = True\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### get only unique vessels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# get only unique vessels\n",
     "if not(is_res_0):\n",
     "    \n",
-    "    sorted = ais_gdf_aoi.sort_values(['MMSI', 'TIMESTAMP(UTC)'], ascending = [True, False])\n",
+    "    # add absolute temporal baseline\n",
+    "    ais_gdf_aoi['Bt'] = (ais_gdf_aoi['TIMESTAMP(UTC)'] - input_metadata.iloc[0]['startdate']).astype('timedelta64[s]')\n",
+    "    ais_gdf_aoi['Bt'] = ais_gdf_aoi['Bt'].apply(np.abs)\n",
+    "    \n",
+    "    sorted = ais_gdf_aoi.sort_values(['MMSI', 'Bt'], ascending = [True, True])\n",
     "\n",
+    "    # select only the entries with the shortest temporal baseline\n",
     "    first = sorted.groupby('MMSI').first().reset_index()\n",
     "\n",
     "    print('n. ais records af. unique selec: {0}'.format(len(first)))\n",
     "    \n",
-    "    if len(first) == 0: is_res_0 = True\n",
-    "        \n",
-    "\n",
+    "    if len(first) == 0: is_res_0 = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if not(is_res_0):\n",
     "    \n",
     "    # timestamp to string (before exporting to shp)\n",
@@ -913,6 +940,9 @@
     "    # make sure it is a geodataframe before exporting it\n",
     "    first = gpd.GeoDataFrame(first, crs=\"EPSG:4326\")\n",
     "\n",
+    "    # drop columns \n",
+    "    first = first.drop(columns=['Bt', 'IMO'])\n",
+    "    \n",
     "    # export to shp\n",
     "    first.to_file(os.path.join(shp_folder, 'ais.shp'))\n",
     "\n",
