add speckle filter and ais status

--- a/src/main/app-resources/notebook/libexec/input.ipynb
+++ b/src/main/app-resources/notebook/libexec/input.ipynb
@@ -62,6 +62,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Speckle filtering**\n",
+    "\n",
+    "Speckle filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "speckleFiltering = dict([('id', 'speckleFiltering'),\n",
+    "                         ('value', 'True'),\n",
+    "                         ('title', 'Speckle Filtering'),\n",
+    "                         ('abstract', 'Speckle Filtering'),\n",
+    "                         ('minOccurs', '1')])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Probability of false alarm**\n",
     "\n",
     "Probability of false alarm: The PFA value is computed by 10^(-x). where x is the given positive number (Adaptive Threshold Algorithm)."
@@ -262,6 +286,7 @@
     "\n",
     "import lxml.etree as etree\n",
     "import xml.etree.ElementTree as ET\n",
+    "import json\n",
     "\n",
     "import subprocess\n",
     "import tempfile\n",
@@ -637,6 +662,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "applyorbitfile = get_operator_default_parameters('Apply-Orbit-File')\n",
+    "\n",
+    "for p in applyorbitfile:\n",
+    "    if p == 'continueOnFail':\n",
+    "        applyorbitfile[p] = 'true'\n",
+    "\n",
+    "applyorbitfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "landseamask = get_operator_default_parameters('Land-Sea-Mask')\n",
     "\n",
     "for p in landseamask:\n",
@@ -655,6 +695,29 @@
     "calibration = get_operator_default_parameters('Calibration')\n",
     "\n",
     "calibration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "specklefilter = get_operator_default_parameters('Speckle-Filter')\n",
+    "\n",
+    "specklefilter['filter'] = 'Lee'\n",
+    "specklefilter['filterSizeX'] = '3'\n",
+    "specklefilter['filterSizeY'] = '3'\n",
+    "specklefilter['dampingFactor'] = '2'\n",
+    "specklefilter['estimateENL'] = 'true'\n",
+    "specklefilter['enl'] = '1.0'\n",
+    "specklefilter['numLooksStr'] = '1'\n",
+    "specklefilter['windowSize'] = '5x5'\n",
+    "specklefilter['targetWindowSizeStr'] = '3x3'\n",
+    "specklefilter['sigmaStr'] = '0.9'\n",
+    "specklefilter['anSize'] = '50'\n",
+    "\n",
+    "specklefilter"
    ]
   },
   {
@@ -711,11 +774,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "##### Processing"
    ]
@@ -728,23 +786,47 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "operators = ['Read',\n",
-    "             'Land-Sea-Mask',\n",
-    "             'Calibration',\n",
-    "             'AdaptiveThresholding',\n",
-    "             'Object-Discrimination',\n",
-    "             'Write']\n",
-    "\n",
-    "for r,w in zip(reads,writes):\n",
+    "if speckleFiltering['value'] == 'True':\n",
     "    \n",
-    "    serial_processing(operators,\n",
-    "                      Read=r,\n",
-    "                      Land_Sea_Mask=landseamask,\n",
-    "                      Calibration=calibration,\n",
-    "                      AdaptiveThresholding=adaptivethresholding,\n",
-    "                      Object_Discrimination=objectdiscrimination,\n",
-    "                      Write=w)\n"
+    "    operators = ['Read',\n",
+    "                 'Apply-Orbit-File',\n",
+    "                 'Land-Sea-Mask',\n",
+    "                 'Calibration',\n",
+    "                 'Speckle-Filter',\n",
+    "                 'AdaptiveThresholding',\n",
+    "                 'Object-Discrimination',\n",
+    "                 'Write']\n",
+    "\n",
+    "    for r,w in zip(reads,writes):\n",
+    "\n",
+    "        serial_processing(operators,\n",
+    "                          Read=r,\n",
+    "                          Apply_Orbit_File=applyorbitfile,\n",
+    "                          Land_Sea_Mask=landseamask,\n",
+    "                          Calibration=calibration,\n",
+    "                          Speckle_Filter=specklefilter,\n",
+    "                          AdaptiveThresholding=adaptivethresholding,\n",
+    "                          Object_Discrimination=objectdiscrimination,\n",
+    "                          Write=w)\n",
+    "else:\n",
+    "    operators = ['Read',\n",
+    "                 'Apply-Orbit-File',\n",
+    "                 'Land-Sea-Mask',\n",
+    "                 'Calibration',\n",
+    "                 'AdaptiveThresholding',\n",
+    "                 'Object-Discrimination',\n",
+    "                 'Write']\n",
+    "\n",
+    "    for r,w in zip(reads,writes):\n",
+    "\n",
+    "        serial_processing(operators,\n",
+    "                          Read=r,\n",
+    "                          Apply_Orbit_File=applyorbitfile,\n",
+    "                          Land_Sea_Mask=landseamask,\n",
+    "                          Calibration=calibration,\n",
+    "                          AdaptiveThresholding=adaptivethresholding,\n",
+    "                          Object_Discrimination=objectdiscrimination,\n",
+    "                          Write=w)\n"
    ]
   },
   {
@@ -832,6 +914,27 @@
     "    ais_data = os.path.join(os.path.dirname(os.getcwd()), 'etc', ais_rel_path)\n",
     "        \n",
     "print(os.path.isfile(ais_data), ais_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read dictionary of ais status\n",
+    "ais_status_rel_path = 'ais_status.json'\n",
+    "ais_status_path = os.path.join(etc_path, ais_status_rel_path)\n",
+    "\n",
+    "if not(os.path.isfile(ais_status_path)): # when running locally\n",
+    "    ais_status_path = os.path.join(os.path.dirname(os.getcwd()), 'etc', ais_status_rel_path)\n",
+    "    \n",
+    "with open(ais_status_path) as f:\n",
+    "  status_json = json.load(f)\n",
+    "\n",
+    "status_dic = {}\n",
+    "for key in status_json:\n",
+    "    status_dic[int(key)] = str(status_json[key])\n"
    ]
   },
   {
@@ -929,6 +1032,8 @@
    "outputs": [],
    "source": [
     "if not(is_res_0):\n",
+    "    \n",
+    "    first = first.replace({\"STATUS\": status_dic})\n",
     "    \n",
     "    # timestamp to string (before exporting to shp)\n",
     "    first['TIMESTAMP(UTC)'] = first['TIMESTAMP(UTC)'].dt.strftime('%Y-%m-%d %H:%M:%S')\n",
